--- a/contact.html
+++ b/contact.html
@@ -7,30 +7,51 @@ active: contact
 	<div class="container pre-footer-margin">
 		<div class="row">
 			<div class="col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-xs-12">
-				<div class="col-xs-10 col-xs-offset-1">
+				<!-- <div class="col-xs-10 col-xs-offset-1">
+					<h3 class="text-center">We'd like to hear from you <br><small>Get in touch using the contact form below or give us a call.</small></h3>
+				</div> -->
+				<div id="wufoo-r1nsuxzg0jz7b10">
 					<h3 class="text-center">We'd like to hear from you <br><small>Get in touch using the contact form below or give us a call.</small></h3>
 				</div>
-				<form action="http://getsimpleform.com/messages?form_api_token=fe5d3a3a13d244025c9e196c47bcb8a6" method="post" role="form" class="form-horizontal">
+				<script type="text/javascript">
+					var r1nsuxzg0jz7b10;(function(d, t) {
+					var s = d.createElement(t), options = {
+					'userName':'safetycircle',
+					'formHash':'r1nsuxzg0jz7b10',
+					'autoResize':true,
+					'height':'557',
+					'async':true,
+					'host':'wufoo.com',
+					'header':'show',
+					'ssl':false};
+					s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
+					s.onload = s.onreadystatechange = function() {
+					var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+					try { r1nsuxzg0jz7b10 = new WufooForm();r1nsuxzg0jz7b10.initialize(options);r1nsuxzg0jz7b10.display(); } catch (e) {}};
+					var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+					})(document, 'script');
+				</script>
+				<!-- <form action="http://getsimpleform.com/messages?form_api_token=fe5d3a3a13d244025c9e196c47bcb8a6" method="post" role="form" class="form-horizontal">
 					  <div class="form-group">
-					    <!-- <label for="name" class="col-xs-2 text-right">Name</label> -->
+					    <label for="name" class="col-xs-2 text-right">Name</label>
 					    <div class="col-xs-10 col-xs-offset-1">
 					    	<input type="text" class="form-control" id="name" placeholder="Your name">
 					    </div>
 					  </div>
 					  <div class="form-group">
-					    <!-- <label for="email" class="col-xs-2 text-right">Email</label> -->
+					    <label for="email" class="col-xs-2 text-right">Email</label>
 					    <div class="col-xs-10 col-xs-offset-1">
 					    	<input type="email" class="form-control" id="email" placeholder="Your email address">
 					    </div>
 					  </div>
 					  <div class="form-group">
-					    <!-- <label for="phone" class="col-xs-2 text-right">Phone</label> -->
+					    <label for="phone" class="col-xs-2 text-right">Phone</label>
 					    <div class="col-xs-10 col-xs-offset-1">
 					    	<input type="tel" class="form-control" id="phone" placeholder="Your preferred contact number">
 					    </div>
 					  </div>
 					  <div class="form-group">
-					    <!-- <label for="enquiry" class="col-xs-2 text-right">Enquiry</label> -->
+					    <label for="enquiry" class="col-xs-2 text-right">Enquiry</label>
 					    <div class="col-xs-10 col-xs-offset-1">
 					    	<textarea class="form-control" id="enquiry" placeholder="How can we help you?" rows="10"></textarea>
 					    </div>
@@ -41,7 +62,8 @@ active: contact
 					  		<button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
 					  	</div>
 					  </div>
-				</form>	
+				</form>	 -->
+
 				<div class="col-xs-10 col-xs-offset-1 sc-well text-center">
 					<h3><span class="glyphicon glyphicon-phone-alt"></span> <a href="tel:+61362787831">+61 3 62787831</a>  
 					</h3>
