--- a/about-us.html
+++ b/about-us.html
@@ -62,7 +62,7 @@ active: about-us
 			<div class="col-md-8 col-xs-7 sc-well">
 				<h3>Drew McGowan</h3>
 				<ul class="staff">
-					<li>Specialist WHS Consultant </li>
+					<li>Senior WHS Consultant </li>
 					<li>B.Sc.Chem., Dip Mgt. </li>
 					<li><a href="mailto:andrewmcgowan@ipmsafety.com.au" target="_blank">andrewmcgowan@ipmsafety.com.au</a></li>
 				</ul>
