Changed Azure address

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ magnific: true
           <p>SafetyCircle is designed for Australian and New Zealand workplaces. Using direct language and straight-forward ideas, SafetyCircle programs build positive Work Health and Safety (WHS) culture in organisations... <a href="faq.html"><span class="glyphicon glyphicon-link"></span> read more</a></p>
           <div class="row callouts">
             <div class="col-xs-6 col-lg-5 text-right">
-              <a href="http://safetycircle.azurewebsites.net/" class="btn btn-callout ">Dashboard Demo</a>
+              <a href="http://safety-circle.azurewebsites.net/" class="btn btn-callout ">Dashboard Demo</a>
             </div>
             <div class="col-xs-6 col-lg-5 text-left">
               <a href="{{site.baseurl}}/contact.html" class="btn btn-callout-alt ">Contact our team</a>
