--- a/videos-and-webinars.html
+++ b/videos-and-webinars.html
@@ -54,8 +54,8 @@ vidtrigger: true
 				<div class="col-xs-6">
 						<a href="#"><img src="http://placehold.it/400x225/58AD12/ffffff&text=20+June+++4-5pm" alt="Alt text" class="img-responsive video-thumbnail"/></a>
 						<h6>Shift Your Culture</h6>
-						<p class="desc">Free introductory webinar - Boost your SafetyCircle efforts with these 10 hot tips on culture change. </p>
-						<a href="{{site.baseurl}}/contact.html">FREE - Register now</a>
+						<p class="desc">Free introductory webinar - Boost your SafetyCircle efforts with these 10 hot tips on culture change. <a href="{{site.baseurl}}/contact.html">FREE - REGISTER HERE</a></p>
+
 				</div>
 				
 				<div class="col-xs-6">
