YouTube client exp videos

--- a/videos-and-webinars.html
+++ b/videos-and-webinars.html
@@ -79,6 +79,36 @@ vidtrigger: true
 				</div>
 			</div>
 		</div>
+		
+		<div class="col-md-6 col-sm-12">
+			<h2 class="highlight-heading">Client Experiences</h2>
+			<div class="row">
+				<div class="col-xs-6">
+						<a href="KooUpCcAkS8" class="vid-trigger"><img src="{{site.baseurl}}/images/goal-of-whs.jpg" alt="Alt text" class="img-responsive video-thumbnail"/></a>
+						<h6><a href="tGDXXloFHAA" class="vid-trigger">Engineering a Positive Safety Culture - Ben Rolliston</a></h6>
+						<p class="desc">Fabrications Manager from Saunders and Ward, Ben Rolliston, speaks strongly about the benefits of taking on the SafetyCircle to shift their work health and safety culture.</p>
+				</div>
+				
+				<div class="col-xs-6">
+						<a href="NY1kXvIVCt0" class="vid-trigger"><img src="{{site.baseurl}}/images/why-manage-whs.jpg" alt="Alt text" class="img-responsive video-thumbnail"/></a>
+						<h6><a href="NY1kXvIVCt0" class="vid-trigger">Why Manage WHS?</a></h6>
+						<p class="desc">Martyn Bradfield explores the main reasons companies and organisations manage WHS - then uncovers the real reasons people do or don’t participate.</p>
+				</div>
+				<div class="clearfix"></div>
+				<div class="col-xs-6">
+						<a href="NCavte2xLZQ" class="vid-trigger"><img src="{{site.baseurl}}/images/andrew-mcgowan.jpg" alt="Alt text" class="img-responsive video-thumbnail"/></a>
+						<h6><a href="NCavte2xLZQ" class="vid-trigger">What’s in it for me?</a></h6>
+						<p class="desc">Andrew McGowan looks at what’s at stake for participating in the SafetyCircle.<span class="registered">&reg;</span></p>
+				</div>
+				
+				<div class="col-xs-6">
+						<a href="QqC1rJAMk4E" class="vid-trigger"><img src="{{site.baseurl}}/images/michael-and-martyn.jpg" alt="Alt text" class="img-responsive video-thumbnail"/></a>
+						<h6><a href="QqC1rJAMk4E" class="vid-trigger">What is SafetyCircle<span class="registered">&reg;</span>?</a></h6>
+						<p class="desc">Co-creators Michael Roberts and Martyn Bradfied discuss what is the SafetyCircle.<span class="registered">&reg;</span></p>
+				</div>
+			</div>
+		</div>
+
 	</div>	
 	
 </div>
