Fixed break on small screens

--- a/index.html
+++ b/index.html
@@ -179,8 +179,11 @@ magnific: true
         </div>
 
         <!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
           <div class="modal-dialog">
+            <a class="close-video-modal" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove"></span></a>
             <div class="modal-content">
+
               <iframe width="560" height="360" src="https://www.youtube.com/embed/NCavte2xLZQ?vq=hd720&modestbranding=1&rel=0&showinfo=0&color=white&autohide=0" style="padding:15px 15px 0px 15px;background:#1a1a1a;border-radius:3px;-moz-box-shadow:5px 5px 8px rgba(0,0,0,0.4);-webkit-box-shadow:5px 5px 8px rgba(0,0,0,0.4);box-shadow:5px 5px 8px rgba(0,0,0,0.4);" frameborder="0"></iframe>
             </div>
           </div>
