--- a/videos-and-webinars.html
+++ b/videos-and-webinars.html
@@ -97,7 +97,7 @@ vidtrigger: true
 						<p class="desc">SafetyCircle Client Experience - Catherine Viney CEO Cosmos - Community Mental Health Support -- Catherine shares her organisations impressive engagement with SafetyCircle thinking.</p>
 				</div>
 
-				<div class="clearfix visible-sm"></div>
+				<div class="clearfix visible-sm visible-xs"></div>
 
 				<div class="col-md-3 col-xs-6">
 						<a href="esTjMWQOPOk" class="vid-trigger"><img src="{{site.baseurl}}/images/james-rose.jpg" alt="Alt text" class="img-responsive video-thumbnail"/></a>
@@ -111,7 +111,7 @@ vidtrigger: true
 						<p class="desc">Roadways CEO Phil Sydney & and WHS Officer Sid Prickett share the benefits of SafetyCircle in a high risk work environment.</p>
 				</div>
 
-				<div class="clearfix visible-md visible-lg visible-sm"></div>
+				<div class="clearfix visible-md visible-lg visible-sm visible-xs"></div>
 				
 				<div class="col-md-3 col-xs-6">
 						<a href="b9bIRk7CYOo" class="vid-trigger"><img src="{{site.baseurl}}/images/cosmos.jpg" alt="Alt text" class="img-responsive video-thumbnail"/></a>
@@ -125,7 +125,7 @@ vidtrigger: true
 						<p class="desc">Steve Pike, WHS Officer, explains the range of reasons and benefits that had electricity company Transend choose, commit to and continue with SafetyCircle.</p>
 				</div>
 
-				<div class="clearfix visible-sm"></div>
+				<div class="clearfix visible-sm visible-xs"></div>
 				
 				<div class="col-md-3 col-xs-6">
 						<a href="FbLpHEzBHzQ" class="vid-trigger"><img src="{{site.baseurl}}/images/terry-mcdonald.jpg" alt="Alt text" class="img-responsive video-thumbnail"/></a>
