Homepage videos added and seminar date change

--- a/videos-and-webinars.html
+++ b/videos-and-webinars.html
@@ -52,7 +52,7 @@ vidtrigger: true
 			<h2 class="highlight-heading">Upcoming Webinars</h2>
 			<div class="row">
 				<div class="col-xs-6">
-						<a href="#"><img src="http://placehold.it/400x225/58AD12/ffffff&text=20+June+++4-5pm" alt="Alt text" class="img-responsive video-thumbnail"/></a>
+						<a href="#"><img src="http://placehold.it/400x225/58AD12/ffffff&text=10+September+++4-5pm" alt="Alt text" class="img-responsive video-thumbnail"/></a>
 						<h6>Shift Your Culture</h6>
 						<p class="desc">Free introductory webinar - Boost your SafetyCircle efforts with these 10 hot tips on culture change. <br> <a href="{{site.baseurl}}/contact.html">FREE - REGISTER HERE</a></p>
 
