client logos and imp safety logo added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ magnific: true
                     <span class="registered">&reg;</span>- powerful cultural change for safe work.</h2>
                 <p>SafetyCircle is designed for Australian and New Zealand workplaces. Using direct language and straight-forward ideas, SafetyCircle programs build positive Work Health and Safety (WHS) culture in organisations...
                     <a href="faq.html">
-                        <span class="glyphicon glyphicon-link"></span>read more</a>
+                        <span class="glyphicon glyphicon-link"></span> read more</a>
                 </p>
                 <div class="row callouts">
                     <div class="col-xs-6 col-lg-5 text-right">
@@ -133,11 +133,11 @@ magnific: true
                         <ol>
                             <li>SafetyCircle START - a short, direct injection of the Stop-Think-Act-Report-Talk cultural norms into the Leadership and Workers. This works best for organisations who are already well on the way in their WHS systems and cultural journey.
                                 <a href="{{site.baseurl}}/images/safetycircle-start.jpg" class="safetycircle-start">
-                                    <span class="glyphicon glyphicon-picture"></span>Overview diagram</a>
+                                    <span class="glyphicon glyphicon-picture"></span> Overview diagram</a>
                             </li>
                             <li>The SafetyCircle Program - this is our premier product. A full diagnostic, customised, measured, cultural shift program that especially develops real leadership through a powerful 7 session SafetyCircle Leadership Program. This works best for organisations who are deeply committed to the Home Safe and Well goal and willing to have the hard conversations and make the tough choices needed to transform WHS culture into a positive and powerful business asset.
                                 <a href="{{site.baseurl}}/images/cultural-change.jpg" class="cultural-change">
-                                    <span class="glyphicon glyphicon-picture"></span>Overview diagram</a>
+                                    <span class="glyphicon glyphicon-picture"></span> Overview diagram</a>
                             </li>
                         </ol>
 
@@ -215,6 +215,29 @@ magnific: true
                         <iframe width="560" height="360" src="" style="padding:15px 15px 0px 15px;background:#1a1a1a;border-radius:3px;-moz-box-shadow:5px 5px 8px rgba(0,0,0,0.4);-webkit-box-shadow:5px 5px 8px rgba(0,0,0,0.4);box-shadow:5px 5px 8px rgba(0,0,0,0.4);" frameborder="0"></iframe>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="clients">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 text-center">
+                <ul class="client-list">
+                    <li><a href="http://www.hobartcity.com.au/home" target="_blank"><img src="assets/img/clients/hcc.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.gcc.tas.gov.au/content/" target="_blank"><img src="assets/img/clients/gcc.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.crickettas.com.au/" target="_blank"><img src="assets/img/clients/cricket-tasmania.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.forestrytas.com.au/" target="_blank"><img src="assets/img/clients/forestry-tasmania.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.islandcare.org.au/" target="_blank"><img src="assets/img/clients/island-care.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.kdwarehouse.com.au/about_us" target="_blank"><img src="assets/img/clients/k&d.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.langford.org.au/" target="_blank"><img src="assets/img/clients/lss.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="https://www.onecare.org.au/" target="_blank"><img src="assets/img/clients/one-care.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.saunward.com.au/" target="_blank"><img src="assets/img/clients/saunders-and-ward.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.simplot.com.au/" target="_blank"><img src="assets/img/clients/simplot-australia.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.skretting.com.au/" target="_blank"><img src="assets/img/clients/skretting.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.zinfra.com.au/" target="_blank"><img src="assets/img/clients/zinfra.jpg" class="img-responsive" alt=""></a></li>
+                </ul>
             </div>
         </div>
     </div>
