client logo changes and minor upgrades

--- a/index.html
+++ b/index.html
@@ -223,16 +223,18 @@ magnific: true
 <div id="clients">
     <div class="container">
         <div class="row">
+            
             <div class="col-xs-12 text-center">
+                <h4 class="text-center">Some of SafetyCircle’s current clients</h4>
                 <ul class="client-list">
                     <li><a href="http://www.hobartcity.com.au/home" target="_blank"><img src="assets/img/clients/hcc.jpg" class="img-responsive" alt=""></a></li>
                     <li><a href="http://www.gcc.tas.gov.au/content/" target="_blank"><img src="assets/img/clients/gcc.jpg" class="img-responsive" alt=""></a></li>
                     <li><a href="http://www.crickettas.com.au/" target="_blank"><img src="assets/img/clients/cricket-tasmania.jpg" class="img-responsive" alt=""></a></li>
                     <li><a href="http://www.forestrytas.com.au/" target="_blank"><img src="assets/img/clients/forestry-tasmania.jpg" class="img-responsive" alt=""></a></li>
-                    <li><a href="http://www.islandcare.org.au/" target="_blank"><img src="assets/img/clients/island-care.jpg" class="img-responsive" alt=""></a></li>
-                    <li><a href="http://www.kdwarehouse.com.au/about_us" target="_blank"><img src="assets/img/clients/k&d.jpg" class="img-responsive" alt=""></a></li>
-                    <li><a href="http://www.langford.org.au/" target="_blank"><img src="assets/img/clients/lss.jpg" class="img-responsive" alt=""></a></li>
-                    <li><a href="https://www.onecare.org.au/" target="_blank"><img src="assets/img/clients/one-care.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.vosconstruction.com.au/" target="_blank"><img src="assets/img/clients/vos.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.cosmos.org.au/" target="_blank"><img src="assets/img/clients/cosmos.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.huonaqua.com.au/" target="_blank"><img src="assets/img/clients/huon.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.petuna.com.au/" target="_blank"><img src="assets/img/clients/petuna.jpg" class="img-responsive" alt=""></a></li>
                     <li><a href="http://www.saunward.com.au/" target="_blank"><img src="assets/img/clients/saunders-and-ward.jpg" class="img-responsive" alt=""></a></li>
                     <li><a href="http://www.simplot.com.au/" target="_blank"><img src="assets/img/clients/simplot-australia.jpg" class="img-responsive" alt=""></a></li>
                     <li><a href="http://www.skretting.com.au/" target="_blank"><img src="assets/img/clients/skretting.jpg" class="img-responsive" alt=""></a></li>
