Register page and other changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: full-width 
-title: Landing Page 
 royalslider: true 
 fitvids: true 
 magnific: true 
@@ -18,13 +17,12 @@ magnific: true
         <div class="row">
             <div class="col-lg-6 ">
                 <div class="fitvids">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/QqC1rJAMk4E?vq=hd720&modestbranding=1&rel=0&showinfo=0&autohide=1" style="padding:0px;background:#1a1a1a;border-radius:3px;-moz-box-shadow:5px 5px 8px rgba(0,0,0,0.4);-webkit-box-shadow:5px 5px 8px rgba(0,0,0,0.4);box-shadow:5px 5px 8px rgba(0,0,0,0.4);" frameborder="0"></iframe>
+		    <iframe width="560" height="315" src="https://www.youtube.com/embed/QqC1rJAMk4E?vq=hd720&modestbranding=1&rel=0&showinfo=0" style="padding:0px;background:#1a1a1a;border-radius:3px;-moz-box-shadow:5px 5px 8px rgba(0,0,0,0.4);-webkit-box-shadow:5px 5px 8px rgba(0,0,0,0.4);box-shadow:5px 5px 8px rgba(0,0,0,0.4);" frameborder="0"></iframe>
                 </div>
             </div>
 
             <div class="col-lg-6">
-                <h2>SafetyCircle
-                    <span class="registered">&reg;</span>- powerful cultural change for safe work.</h2>
+		<h2>SafetyCircle<span class="registered">&reg;</span> - powerful cultural change for safe work.</h2>
                 <p>SafetyCircle is designed for Australian and New Zealand workplaces. Using direct language and straight-forward ideas, SafetyCircle programs build positive Work Health and Safety (WHS) culture in organisations...
                     <a href="faq.html">
                         <span class="glyphicon glyphicon-link"></span> read more</a>
