Change Huon Logo to Veolia

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ magnific: true
                     <li><a href="http://www.forestrytas.com.au/" target="_blank"><img src="assets/img/clients/forestry-tasmania.jpg" class="img-responsive" alt=""></a></li>
                     <li><a href="http://www.vosconstruction.com.au/" target="_blank"><img src="assets/img/clients/vos.jpg" class="img-responsive" alt=""></a></li>
                     <li><a href="http://www.cosmos.org.au/" target="_blank"><img src="assets/img/clients/cosmos.jpg" class="img-responsive" alt=""></a></li>
-                    <li><a href="http://www.huonaqua.com.au/" target="_blank"><img src="assets/img/clients/huon.jpg" class="img-responsive" alt=""></a></li>
+                    <li><a href="http://www.veolia.com.au/" target="_blank"><img src="assets/img/clients/veolia.jpg" class="img-responsive" alt=""></a></li>
                     <li><a href="http://www.petuna.com.au/" target="_blank"><img src="assets/img/clients/petuna.jpg" class="img-responsive" alt=""></a></li>
                     <li><a href="http://www.saunward.com.au/" target="_blank"><img src="assets/img/clients/saunders-and-ward.jpg" class="img-responsive" alt=""></a></li>
                     <li><a href="http://www.simplot.com.au/" target="_blank"><img src="assets/img/clients/simplot-australia.jpg" class="img-responsive" alt=""></a></li>
