resources, book webinar form and reg for updates

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ magnific: true
         <div class="row">
             <div class="col-lg-6 ">
                 <div class="fitvids">
-		    <iframe width="560" height="315" src="https://www.youtube.com/embed/QqC1rJAMk4E?vq=hd720&modestbranding=1&rel=0&showinfo=0" style="padding:0px;background:#1a1a1a;border-radius:3px;-moz-box-shadow:5px 5px 8px rgba(0,0,0,0.4);-webkit-box-shadow:5px 5px 8px rgba(0,0,0,0.4);box-shadow:5px 5px 8px rgba(0,0,0,0.4);" frameborder="0"></iframe>
+		    <iframe width="560" height="315" src="https://www.youtube.com/embed/QqC1rJAMk4E?vq=hd720&modestbranding=1&rel=0&showinfo=0&controls=1" style="padding:0px;background:#1a1a1a;border-radius:3px;-moz-box-shadow:5px 5px 8px rgba(0,0,0,0.4);-webkit-box-shadow:5px 5px 8px rgba(0,0,0,0.4);box-shadow:5px 5px 8px rgba(0,0,0,0.4);" frameborder="0"></iframe>
                 </div>
             </div>
 
