--- a/book-webinar.html
+++ b/book-webinar.html
@@ -1,25 +1,23 @@
 ---
 layout: full-width
-title: Register for Updates
-active: register
+title: Book Webinar Session
+active: book-webinar
 ---
 <div class="main">
 	<div class="container pre-footer-margin">
 		<div class="row">
 			<div class="col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-xs-12">
 
-
-
-				<div id="wufoo-s115trvs1mvzneu">
-					<h3 class="text-center">Register for updates <br><small>We'll send you updates about SafetyCircle</small></h3>
+				<div id="wufoo-w78ww8j1ivv5fh">
+					<h3 class="text-center">Book Webinar Session <br><small>Provide your details below and we'll book a spot for you on our upcoming webinar session.</small></h3>
 				</div>
-				<p class="text-center">or <a href="{{site.baseurl}}/contact.html" class="highlight-alt">CONTACT US</a></p>
-				<script type="text/javascript">var s115trvs1mvzneu;(function(d, t) {
+				<script type="text/javascript">
+					var w78ww8j1ivv5fh;(function(d, t) {
 					var s = d.createElement(t), options = {
 					'userName':'safetycircle',
-					'formHash':'s115trvs1mvzneu',
+					'formHash':'w78ww8j1ivv5fh',
 					'autoResize':true,
-					'height':'473',
+					'height':'677',
 					'async':true,
 					'host':'wufoo.com',
 					'header':'show',
@@ -27,11 +25,10 @@ active: register
 					s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
 					s.onload = s.onreadystatechange = function() {
 					var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-					try { s115trvs1mvzneu = new WufooForm();s115trvs1mvzneu.initialize(options);s115trvs1mvzneu.display(); } catch (e) {}};
+					try { w78ww8j1ivv5fh = new WufooForm();w78ww8j1ivv5fh.initialize(options);w78ww8j1ivv5fh.display(); } catch (e) {}};
 					var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
 					})(document, 'script');
 				</script>
-
 
 
 				<div class="col-xs-10 col-xs-offset-1 sc-well text-center">
