--- a/videos-and-webinars.html
+++ b/videos-and-webinars.html
@@ -54,7 +54,7 @@ vidtrigger: true
 				<div class="col-xs-6">
 						<a href="#"><img src="http://placehold.it/400x225/58AD12/ffffff&text=15+October+++4-5pm" alt="Alt text" class="img-responsive video-thumbnail"/></a>
 						<h6>Shift Your Culture</h6>
-						<p class="desc">Free introductory webinar - Boost your SafetyCircle efforts with these 10 hot tips on culture change. <br> <a href="{{site.baseurl}}/register.html">FREE - REGISTER HERE</a></p>
+						<p class="desc">Free introductory webinar - Boost your SafetyCircle efforts with these 10 hot tips on culture change. <br> <a href="{{site.baseurl}}/book-webinar.html"><span class="glyphicon glyphicon-pencil"></span> FREE - Book Now </a></p>
 
 				</div>
 				
