change webinar to 'Check your safety Culture'

--- a/videos-and-webinars.html
+++ b/videos-and-webinars.html
@@ -52,9 +52,9 @@ vidtrigger: true
 			<h2 class="highlight-heading">Upcoming Webinars</h2>
 			<div class="row">
 				<div class="col-xs-6">
-						<a href="#"><img src="http://placehold.it/400x225/58AD12/ffffff&text=15+October+++4-5pm" alt="Alt text" class="img-responsive video-thumbnail"/></a>
-						<h6>Shift Your Culture</h6>
-						<p class="desc">Free introductory webinar - Boost your SafetyCircle efforts with these 10 hot tips on culture change. <br> <a href="{{site.baseurl}}/book-webinar.html"><span class="glyphicon glyphicon-pencil"></span> FREE - Book Now </a></p>
+						<a href="#"><img src="{{site.baseurl}}/images/is-your-safety-culture-ply-10.jpg" alt="Alt text" class="img-responsive video-thumbnail"/></a>
+						<h6>Check Your Safety Culture</h6>
+						<p class="desc">What does it really take to build a strong safety culture? Facilitated by SafetyCircle Co-Creator Michael Roberts. <br> <a href="{{site.baseurl}}/book-webinar.html"><span class="glyphicon glyphicon-pencil"></span> FREE - Book Now </a></p>
 
 				</div>
 				
