--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ magnific: true
 
         <div class="col-xs-6 col-sm-4">
             <h2 class="highlight-heading text-center">Free Webinar</h2>
-            <a href="{{site.baseurl}}/book-webinar.html" class="no-image-hover"><img src="{{site.baseurl}}/images/whs-culture-change-webinar.jpg" alt="Alt text" class="img-responsive video-thumbnail"/></a>
-            <h6>Shift Your Culture</h6>
-            <p>Free introductory webinar - Boost your SafetyCircle efforts with these 10 hot tips on culture change.</p>
+            <a href="{{site.baseurl}}/book-webinar.html" class="no-image-hover"><img src="{{site.baseurl}}/images/is-your-safety-culture-ply-10.jpg" alt="Alt text" class="img-responsive video-thumbnail"/></a>
+            <h6>Check Your Safety Culture</h6>
+            <p>What does it really take to build a strong safety culture? Facilitated by SafetyCircle Co-Creator Michael Roberts.</p>
             <a href="{{site.baseurl}}/book-webinar.html" class="btn btn-rounded btn-block btn-callout "><span class="glyphicon glyphicon-pencil"></span> Register Now</a>
         </div>
 
