urgent changes for entrepreneurs thingamajig

--- a/about-us.html
+++ b/about-us.html
@@ -56,9 +56,17 @@ active: about-us
 		<!-- Photo on Left -->
 		<div class="row vertical-align">
 			<div class="col-md-3 col-md-offset-1 col-xs-5">
-				<img src="{{site.baseurl}}/images/drew-mcgowan.jpg" alt="" class="img-responsive img-circle pull-right">
+				<img src="{{site.baseurl}}/images/megan-sargent.jpg" alt="" class="img-responsive img-circle pull-right">
 			</div>
 
+			<div class="col-md-8 col-xs-7 sc-well">
+				<h3>Megan Sargent</h3>
+				<p>Megan Sargent began working with the SafetyCircle team in late 2014 on developing SafetyCircle as a powerful WHS program for New Zealanders. Megan consulted to IPM Safety in 2012 and recently completed the SafetyCircle Advisor and Coach training. Megan is working hard toward SafetyCircle’s impending launch in New Zealand. With a blue ribbon resume as a small business entrepreneur (growing Abe’s Bagels from a corner shop to a dominant NZ brand exporting to Australia and beyond); and working for over 12 years in marketing with NZ Steel, Comalco and Pink Batts. Megan has a Masters of Business majoring in marketing.</p>
+			</div>
+		</div>
+
+		<!-- Photo on right -->
+		<div class="row vertical-align">
 			<div class="col-md-8 col-xs-7 sc-well">
 				<h3>Drew McGowan</h3>
 				<ul class="staff">
@@ -68,10 +76,16 @@ active: about-us
 				</ul>
 				<p>Drew McGowan is IPM Safety’s Senior WHS Consultant and Trainer based in Launceston and working across Australia. Drew spent 20 years in pharmaceutical manufacturing and energy distribution in managerial roles before coming to IPM Safety. Drew also holds Certificate IV in Training and Assessment.  Drew joined the IPM Safety team in April 2010 and has become a powerful coach and leader of the SafetyCircle® culture change program.</p>
 			</div>
+			<div class="col-md-3 col-xs-5">
+				<img src="{{site.baseurl}}/images/drew-mcgowan.jpg" alt="" class="img-responsive img-circle pull-left">
+			</div>
 		</div>
 
-		<!-- Photo on Right -->
+		<!-- Photo on left -->
 		<div class="row vertical-align">
+			<div class="col-md-3 col-md-offset-1 col-xs-5">
+				<img src="{{site.baseurl}}/images/oliver-bodak.jpg" alt="" class="img-responsive img-circle pull-right">
+			</div>
 			<div class="col-md-8 col-xs-7 sc-well">
 				<h3>Oliver Bodak</h3>
 				<ul class="staff">
@@ -81,17 +95,10 @@ active: about-us
 				</ul>
 				<p>Oliver commenced with IPM Safety in 2012 and has over 10 years’ experience in the delivery of health, wellness and rehabilitation solutions. Oliver also holds Certificate IV in Training and Assessment.  In May 2013 Oliver took over the position of Team Leader (WHS Consulting) at IPM Safety. Working closely with his team, Oliver continues to provide practical Health and Safety solutions to assist all workers to Work Safe – Enjoy Life® and is a fully qualified SafetyCircle Leader.</p>
 			</div>
-			<div class="col-md-3 col-xs-5">
-				<img src="{{site.baseurl}}/images/oliver-bodak.jpg" alt="" class="img-responsive img-circle pull-left">
-			</div>
 		</div>
 
-		<!-- Photo on Left -->
+		<!-- Photo on Right -->
 		<div class="row vertical-align">
-			<div class="col-md-3 col-md-offset-1 col-xs-5">
-				<img src="{{site.baseurl}}/images/alice-gibson.jpg" alt="" class="img-responsive img-circle pull-right">
-			</div>
-
 			<div class="col-md-8 col-xs-7 sc-well">
 				<h3>Alice Gibson</h3>
 				<ul class="staff">
@@ -100,20 +107,8 @@ active: about-us
 				</ul>
 				<p>Alice began working with IPM Safety as a trainee in 2010 and has become an integral member of IPM Safety’s team. Since then she has gained her Certificate IV in Marketing and has become IPM Safety’s full time Training Co-ordinator. Alice offers invaluable business support to our consultants and SafetyCircle clients. Alice assists all our clients through the coordination of bookings, logistics, materials, quality and timeliness for all SafetyCircle programs.</p>
 			</div>
-		</div>
-
-		<!-- Photo on Right -->
-		<div class="row vertical-align pre-footer-margin">
-			<div class="col-md-8 col-xs-7 sc-well">
-				<h3>Claire Hills</h3>
-				<ul class="staff">
-					<li>Business Support</li>
-					<li><a href="mailto:clairehills@ipmsafety.com.au" target="_blank">clairehills@ipmsafety.com.au</a></li>
-				</ul>
-				<p>Claire began with IPM Safety in November 2012 in the position of Business Support for our Launceston team. Claire has a number of years’ experience in business administration in the finance industry, and brings many valuable skills to her role at IPM Safety and SafetyCircle.</p>
-			</div>
 			<div class="col-md-3 col-xs-5">
-				<img src="{{site.baseurl}}/images/claire-hills.jpg" alt="" class="img-responsive img-circle pull-left">
+				<img src="{{site.baseurl}}/images/alice-gibson.jpg" alt="" class="img-responsive img-circle pull-left">
 			</div>
 		</div>
 
