--- a/videos-and-webinars.html
+++ b/videos-and-webinars.html
@@ -52,30 +52,30 @@ vidtrigger: true
 			<h2 class="highlight-heading">Upcoming Webinars</h2>
 			<div class="row">
 				<div class="col-xs-6">
-						<a href="#"><img src="{{site.baseurl}}/images/is-your-safety-culture-ply-10.jpg" alt="Alt text" class="img-responsive video-thumbnail"/></a>
+						<a href="#"><img src="{{site.baseurl}}/images/is-your-safety-culture-ply-10-webinar.jpg" alt="Alt text" class="img-responsive video-thumbnail"/></a>
 						<h6>Check Your Safety Culture</h6>
 						<p class="desc">What does it really take to build a strong safety culture? Facilitated by SafetyCircle Co-Creator Michael Roberts. <br> <a href="{{site.baseurl}}/book-webinar.html"><span class="glyphicon glyphicon-pencil"></span> FREE - Book Now </a></p>
 
 				</div>
 				
 				<div class="col-xs-6">
-						<a href="#"><img src="http://placehold.it/400x225/58AD12/ffffff&text=+++++TBA+++++" alt="Alt text" class="img-responsive video-thumbnail"/></a>
+						<a href="#"><img src="http://placehold.it/400x225/58AD12/ffffff&text=+++July+28th+2015+++" alt="Alt text" class="img-responsive video-thumbnail"/></a>
 						<h6>Driving Inside the Circle</h6>
-						<p class="desc">Coming soon.</p>
+						<p class="desc"></p>
 				</div>
 
 				<div class="clearfix"></div>
 
 				<div class="col-xs-6">
-						<a href="#"><img src="http://placehold.it/400x225/58AD12/ffffff&text=+++++TBA+++++" alt="Alt text" class="img-responsive video-thumbnail"/></a>
+						<a href="#"><img src="http://placehold.it/400x225/58AD12/ffffff&text=+++Sept+24th+2015+++" alt="Alt text" class="img-responsive video-thumbnail"/></a>
 						<h6>Reducing Strain Injuries using SafetyCircle</h6>
-						<p class="desc">Coming soon.</p>
+						<p class="desc"></p>
 				</div>
 				
 				<div class="col-xs-6">
-						<a href="#"><img src="http://placehold.it/400x225/58AD12/ffffff&text=+++++TBA+++++" alt="Alt text" class="img-responsive video-thumbnail"/></a>
+						<a href="#"><img src="http://placehold.it/400x225/58AD12/ffffff&text=+++Nov+25th+2015+++" alt="Alt text" class="img-responsive video-thumbnail"/></a>
 						<h6>Managing Fatigue inside the Circle</h6>
-						<p class="desc">Coming soon.</p>
+						<p class="desc"></p>
 				</div>
 			</div>
 		</div>
