megan photo and about info replaced

--- a/about-us.html
+++ b/about-us.html
@@ -61,7 +61,7 @@ active: about-us
 
 			<div class="col-md-8 col-xs-7 sc-well">
 				<h3>Megan Sargent</h3>
-				<p>Megan Sargent began working with the SafetyCircle team in late 2014 on developing SafetyCircle as a powerful WHS program for New Zealanders. Megan consulted to IPM Safety in 2012 and recently completed the SafetyCircle Advisor and Coach training. Megan is working hard toward SafetyCircle’s impending launch in New Zealand. With a blue ribbon resume as a small business entrepreneur (growing Abe’s Bagels from a corner shop to a dominant NZ brand exporting to Australia and beyond); and working for over 12 years in marketing with NZ Steel, Comalco and Pink Batts. Megan has a Masters of Business majoring in marketing.</p>
+				<p>With a blue ribbon resume as a successful entrepreneur (growing Abe’s Bagels from a corner shop to an iconic NZ brand, a multi-million dollar business and Australasia’s largest bagel baker); Megan worked for several years prior in marketing with NZ Steel, Comalco and Pink Batts. Megan has a Bachelor of Business majoring in Marketing, a Diploma in Entrepreneurship, and is a member of the NZ Institute of Directors.</p>
 			</div>
 		</div>
 
