--- a/resources.html
+++ b/resources.html
@@ -30,6 +30,12 @@ active: resources
 						<p class="desc">A short, direct injection of the Stop-Think-Act-Report-Talk cultural norms into the Leadership and Workers. This works best for organisations who are already well on the way in their WHS systems and cultural journey. <a href="{{site.baseurl}}/resources/START.pdf" target="_blank"><span class="glyphicon glyphicon-download"></span></a></p>
 				</div>
 
+				<div class="col-md-3 col-xs-6">
+						<a href="{{site.baseurl}}/resources/safety-culture-snapshot-coaching-for-safety-cards.pdf" target="_blank"><img src="{{site.baseurl}}/resources/safety-culture-snapshot-coaching-for-safety-cards.jpg" alt="SafetyCircle Coaching Safety Cards" class="img-responsive video-thumbnail"/></a>
+						<h6><a href="{{site.baseurl}}/resources/safety-culture-snapshot-coaching-for-safety-cards.pdf" target="_blank">Safety Cards</a></h6>
+						<p class="desc"><a href="{{site.baseurl}}/resources/safety-culture-snapshot-coaching-for-safety-cards.pdf" target="_blank"><span class="glyphicon glyphicon-download"></span></a></p>
+				</div>
+
 				<div class="clearfix visible-md visible-lg visible-sm visible-xs"></div>
 
 			</div>
