Coaching cards description added

--- a/resources.html
+++ b/resources.html
@@ -32,8 +32,8 @@ active: resources
 
 				<div class="col-md-3 col-xs-6">
 						<a href="{{site.baseurl}}/resources/safety-culture-snapshot-coaching-for-safety-cards.pdf" target="_blank"><img src="{{site.baseurl}}/resources/safety-culture-snapshot-coaching-for-safety-cards.jpg" alt="SafetyCircle Coaching Safety Cards" class="img-responsive video-thumbnail"/></a>
-						<h6><a href="{{site.baseurl}}/resources/safety-culture-snapshot-coaching-for-safety-cards.pdf" target="_blank">Safety Cards</a></h6>
-						<p class="desc"><a href="{{site.baseurl}}/resources/safety-culture-snapshot-coaching-for-safety-cards.pdf" target="_blank"><span class="glyphicon glyphicon-download"></span></a></p>
+						<h6><a href="{{site.baseurl}}/resources/safety-culture-snapshot-coaching-for-safety-cards.pdf" target="_blank">Safety Culture Coaching Cards</a></h6>
+						<p class="desc">These “Safety Culture Coaching Cards” are entirely consistent with the SafetyCircle approach: being respectful, clear and firm. The cards give concise coaching tips on Listening, Questioning, Giving Feedback and running Effective Meetings. They’re freely available from WorkSafe NZ, so we thought we’d share them with you.<a href="{{site.baseurl}}/resources/safety-culture-snapshot-coaching-for-safety-cards.pdf" target="_blank"><span class="glyphicon glyphicon-download"></span></a></p>
 				</div>
 
 				<div class="clearfix visible-md visible-lg visible-sm visible-xs"></div>
